# cabal-test-quickcheck

./: .travis.yml  LICENSE  README  README.md  cabal-test-quickcheck.cabal
examples/: README  cabal-test-quickcheck-example.cabal
examples/src/: CabalQuickCheckExample.hs
src/Distribution/TestSuite/: QuickCheck.hs
test/: Example.hs
