name:          cabal-test-quickcheck
version:       0.1.0.0
homepage:      https://github.com/zimothy/cabal-test-quickcheck
license:       MIT
license-file:  LICENSE
author:        Timothy Jones
maintainer:    Timothy Jones <git@zimothy.com>
copyright:     (c) 2013 Timothy Jones
category:      Testing
build-type:    Simple
cabal-version: >=1.10
synopsis:
  Support for QuickCheck with the 'detailed' Cabal testing interface.

library
  exposed-modules:  Distribution.TestSuite.QuickCheck
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror

  build-depends:
    base       >= 4.6.0  && < 4.7,
    Cabal      >= 1.16.0 && < 1.19,
    QuickCheck >= 2.6    && < 2.7

